# TermCraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: TODO.md  design_notes.md  notes.md  post_mortem.md
src/: cl_option_manager.hpp  cl_options.hpp  clom.hpp  engine.cpp  engine.hpp  glm.hpp  main.cpp  stb.cpp  user_settings.hpp
src/controller/: camera.cpp  camera.hpp  controller.cpp  controller.hpp  input_state.hpp  key_state.hpp
src/misc/: fragment.hpp  mesh.hpp  tri.hpp  vertex.hpp
src/render/: buffer.hpp  draw_util.cpp  draw_util.hpp  fragment.cpp  fragment.hpp  mesh.cpp  mesh.hpp  render.cpp  render.hpp  texture.cpp  texture.hpp  tri.cpp  tri.hpp  vertex.cpp  vertex.hpp
src/shaders/: frag_shaders.hpp  post_shaders.hpp  vert_shaders.hpp
src/world/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  mesh_util.cpp  mesh_util.hpp  raycast_util.cpp  raycast_util.hpp  spline.cpp  spline.hpp  world.cpp  world.hpp
